2002-02-19  Bastien Nocera  <hadess@hadess.net>

	* libnautilus-private/nautilus-authn-manager.c:
	(present_authentication_dialog_nonblocking):
	make password box work again, catching "response"
	signal instead of "clicked"

2002-02-19  Michael Meeks  <michael@ximian.com>

	* src/nautilus-window-manage-views.c
	(determined_initial_view_callback): ensure we survive
	without trashing the WM, even if we can get no working
	mime data at all.

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_init): g_signal_connect_object
	is not like gtk_signal_connect_object_while_alive, it's
	missing a vital arg. swap.

2002-02-17  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_theme_changed): setup both
	the rgba and GdkColor variants.
	(update_label_color): upd. color handling.
	(alloc_colors): allocate the colors on realize

2002-02-15  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-container.c
	(nautilus_icon_container_get_label_color): return
	the colors we need, grab them from the style's text
	information though.

2002-02-14  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-icon-canvas-item.c
	(nautilus_icon_canvas_item_get_property),
	(nautilus_icon_canvas_item_set_property): port to
	properties.
	(draw_or_measure_label_text): update color handling,
	could we re-use the gc here ?
	(draw_stretch_handles): upd gc unref.
	(nautilus_icon_canvas_item_class_init): upd.

	* libnautilus-private/nautilus-theme.c
	(nautilus_pixmap_file_may_be_local),
	(nautilus_theme_install_user_theme),
	(nautilus_theme_make_preview_pixbuf),
	(theme_get_property),
	(load_theme_document): upd. file tests.

	* libnautilus-private/nautilus-monitor.c
	(get_event_uri): use g_build_filename.

	* libnautilus-private/nautilus-find-icon-image.c
	(get_user_emblem_path, make_full_icon_path),
	(make_full_icon_path): upd. file test.
